--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+* {box-sizing: border-box;}
+
+.post {
+  border    : 1px solid;
+  margin-top: 30px;
+  width     : 400px;
+}
+
+.post-date {
+  color : gray;
+}
